gui.css
/* MENU */

ul.menu a {
    text-decoration: none;
    color: inherit;
}

ul.menu, ul.menu ul {
    background: var(--color-dark-gray);
    background: var(--angle-fade-to-gray);
    padding-inline-start: 0px;
    display: flex;
    border-radius: 5px;
    width: fit-content;
    font-weight: bold;
    letter-spacing: 2px;
}

ul.menu:hover {
    cursor: pointer;
}

.menu li {
    display: inline-flex;
    height: 4em;
    align-items: center;
    text-transform: uppercase;
    padding: 0 5px;
    text-shadow: var(--standard-shadow);
    font-size: 1em;
    position: relative;
    border-top: var(--border-light);
    border-right: var(--border-shadow);
    border-left: var(--border-light);
    border-bottom: var(--border-shadow);
    justify-content: center;
}

.menu>li:first-child {
    border-radius: 5px 0 0 5px;
}

.menu>li:last-child {
    border-radius: 0 5px 5px 0;
}

.menu li ul li:last-child {
    border-radius: 0 0 5px 5px;
}

ul.menu ul {
    flex-direction: column;
}

ul.menu li ul {
    position: absolute;
    top: calc(100% + 1px);
    left: -1px;
    visibility: hidden;
    opacity: 0;
    transition: visibility 0s, opacity 0.3s linear;
    transition-delay: 0.1s;
    border-radius: 0 0 5px 5px;
    box-shadow: var(--standard-shadow);
    color: var(--off-white);
    font-size: 0.85em;
}

ul.menu li ul li ul {
    left: calc(100% + 1px);
    top: -1px;
    border-radius: 0 5px 5px 5px;
}

ul.menu li ul li {
    font-size: 0.9em;
}

ul.menu li ul li ul li:first-child {
    border-radius: 0 5px 0 0;
}

ul.menu li:hover {
    background: linear-gradient(135deg, rgba(0,0,0,0.0) 75%, rgba(107,107,107,0.85) 100%);
    color: var(--main-color-light);
}

ul.menu>li:first-child:hover {
    border-radius: 5px 0 0 0;
}

ul.menu>li:last-child:hover {
    border-radius: 0 5px 0 0;
}

ul.menu>li>ul>li:last-child:hover {
    border-radius: 0 0 0 5px;
}

ul.menu li:hover > ul, ul.menu li ul:hover {
    visibility: visible;
    opacity: 1;
}

/* BANNER */

span#banner {
    position: relative;
    display: inline-block;
    width: 100%;
    height: 275px;
}

#banner h1, #banner h2, #banner h3, #banner h4 {
    top: 0;
    left: 0;
    position: absolute;
    text-transform: uppercase;
    background: none;
    border: none;
    margin: 0;
    transition: top 0.2s ease-out, left 0.3s ease-out, font-size 0.2s ease-out, opacity 0.4s ease-out;
}

#banner h2, #banner h3, #banner h4 {
    color: rgba(0,0,0,0.0);
    opacity: 1;
}

#banner h1 {
    font-size: 11em;
    opacity: 0;
}

#banner h2 {
    font-size: 12em;
    text-shadow: 0px 0px 30px lightgray;
    top: -35px;
    left: 25px;
}

#banner h3 {
    font-size: 10em;
    text-shadow: 0px 0px 16px lightgrey;
    top: 50px;
    left: -20px;
}

#banner h4 {
    font-size: 15em;
    text-shadow: 1px 1px 1px blue;

}

#banner:hover h2, #banner:hover h3, #banner:hover h4 {
    font-size: 11em;
    top: 0px;
    left: 0px;
    opacity: 0;
}

#banner:hover h1 {
    opacity: 1;
}

